le travail de amine.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
 # ===============================
-# JPA / HIBERNATE
+# JPA / HIBERNATEs
 # ===============================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
